<resources>
    <string name="app_name">JEFF ACCOUNT</string>
    <string name="api_key"></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about">About Us</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="blog">BLog</string>
    <string name="log_in_now">LogIn Now</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="or_log_in_with">Or Log In With</string>
    <string name="forget_password">Forget Password</string>
    <string name="company_details">Company Details</string>
    <string name="name">Name</string>
    <string name="street_address">Street Address</string>
    <string name="country">Country</string>
    <string name="post_code">Post Code</string>
    <string name="telephone_no">Telephone No</string>
    <string name="email_address">Email Address</string>
    <string name="web_address">Web Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="quotation">Quotation</string>
    <string name="purchase">Purchase</string>
    <string name="invoice">Invoice</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="time_sheet_job_no">Time Sheet job no</string>
    <string name="time_sheet_quotation_no">Time Sheet quotation no</string>
    <string name="time_sheet_customer_name">Time Sheet customer name</string>
    <string name="job_no">Job No</string>
    <string name="quotation_no">Quotation No.</string>
    <string name="vat">Vat %</string>
    <string name="date">Date</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="special_instruction_comment">Special Instruction/Comment</string>
    <string name="item_description">Item Description</string>
    <string name="payment_method">Payment Method</string>
    <string name="unit_amount">Unit Amount</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="customer_name">Customer Name</string>
    <string name="currently_you_don_t_have_any_customer">Currently you don\'t have any customer</string>
    <string name="currently_you_don_t_have_any_supplier">Currently you don\'t have any supplier</string>
    <string name="currently_you_don_t_have_any_quotation">Currently you don\'t have any quotation</string>
    <string name="currently_you_don_t_have_any_purchase">Currently you don\'t have any purchase</string>
    <string name="enter_valid_email">Enter Valid Email Address</string>
    <string name="add_name">Add  Name</string>
    <string name="add_address">Add an address</string>
    <string name="enter_post_code">Enter a post code</string>
    <string name="add_phone_no">Add a phone number</string>
    <string name="add_email">Add an email</string>
    <string name="add_web_address">Add a web address</string>
    <string name="please_wait">Please Wait</string>
    <string name="add">add</string>
    <string name="update">Update</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="print">Print</string>
    <string name="create_pdf">Create Pdf</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="enter_job_no">Enter Job No</string>
    <string name="enter_quotation_no">Enter Quotation No.</string>
    <string name="enter_vat">Enter Vat%</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_item_des">Enter Item Description</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="enter_payment_method">Enter Payment Method</string>
    <string name="enter_unit_amount">Enter Unit Amount</string>
    <string name="enter_advance_amount">Enter Advance Amount</string>
    <string name="enter_discount_amount">Enter discount amount</string>
    <string name="enter_total_amount">Enter Total Amount</string>
    <string name="company">Company</string>
    <string name="add_new_companies">Add new Companies</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_street_address">Enter street address</string>
    <string name="add_time_sheet">Add Time Sheet</string>
    <string name="hours">Hours</string>
    <string name="amount">Amount</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="log_out">Log out</string>
    <string name="jeff_message_to_cus"><![CDATA[ALL KIND OF ELECTRICAL WORK SUCH AS REWIRING, REPLACE, CONSUMER UNIT, IN & OUT LIGHT SOCKET, COOKERS, SHOWERS, ELECTRIC HOBS & HOOD, UNDER FLOOR HEATER ETC.]]></string>
    <string name="jeff_inquiry_message">If have nay inquiry drop your work on </string>
    <string name="qty">Qty</string>
    <string name="no_of_item">No of Item</string>
    <string name="add_item">Add Item</string>
    <string name="add_items">Add Items</string>
    <string name="customer_list">Customer List</string>
    <string name="search_by_name">Search by name</string>
    <string name="customer_data">Customer data</string>
    <string name="supplier_details">Supplier details</string>
    <string name="create_quotation">Create Quotation</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="add_to_invoice">Add To Invoice</string>
    <string name="worksheet">Worksheet</string>
    <string name="select_a_job_no">Select a Job no</string>
    <string name="edit">Edit</string>
    <string name="add_company">Add Company</string>
    <string name="search">Search</string>
    <string name="quotation_List">Quotation List</string>
    <string name="invoice_list">invoice list</string>
    <string name="invoice_list_jobno">invoice list job no</string>
    <string name="invoice_list_quotationno">invoice list quotation no</string>
    <string name="invoice_list_customername">invoice list customer name</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_list">purchase list</string>
    <string name="purchase_list_job_no">purchase list job no</string>
    <string name="purchase_list_quotation_no">purchase list quotation no</string>
    <string name="purchase_list_customer_name">purchase list customer name</string>
    <string name="payment_link">Payment link</string>
    <string name="county">County</string>
    <string name="enter_county_name">Enter County name</string>
    <string name="add_worker">Add Worker</string>
    <string name="amount_per_hour">Amount per hour</string>
    <string name="update_worker">Update Worker</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="country_list">Country List</string>
    <string name="search_by">Search By</string>
    <string name="com_description">Company description</string>
    <string name="search_supplier">Search Supplier</string>
    <string name="select">Select</string>
    <string name="modify">Modify</string>
    <string name="unit">Unit</string>

    <string-array name="quantities">
        <item>No</item>
        <item>Kg</item>
        <item>lt</item>
        <item>Pkt</item>
        <item>box</item>
    </string-array>
</resources>
