<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home"
    tools:context=".ui.ChangePasswordFragment">

    <EditText
        android:id="@+id/current_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_current_password"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password"
        android:layout_margin="8dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_pass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_margin="8dp"/>

</LinearLayout>