<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/search_by"
    style="@style/TextAppearance.AppCompat.Headline"
    android:textStyle="bold"
    android:gravity="center"
    android:padding="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/job_no_search_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_no"
        style="@style/TextAppearance.AppCompat.Title"
        android:gravity="center"
        android:padding="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/quotation_no_search_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quotation_no"
        style="@style/TextAppearance.AppCompat.Title"
        android:gravity="center"
        android:padding="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/customer_search_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        style="@style/TextAppearance.AppCompat.Title"
        android:gravity="center"
        android:padding="8dp"/>
</LinearLayout>