<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.jeffaccount.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_addCustomer"
            app:destination="@id/addCustomer" />
        <action
            android:id="@+id/action_homeFragment_to_addSupplierFragment"
            app:destination="@id/addSupplierFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addQuotationFragment"
            app:destination="@id/addQuotationFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.jeffaccount.ui.AboutFragment"
        android:label="@string/about" />
    <fragment
        android:id="@+id/blogFragment"
        android:name="com.example.jeffaccount.ui.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/blog_fragment" />
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.example.jeffaccount.ui.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/contact_us_fragment" />
    <fragment
        android:id="@+id/faqFragment"
        android:name="com.example.jeffaccount.ui.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/faq_fragment" />
    <fragment
        android:id="@+id/addCustomer"
        android:name="com.example.jeffaccount.ui.home.customer.AddCustomerFragment"
        android:label="Add Customer"
        tools:layout="@layout/add_customer_fragment">
        <action
            android:id="@+id/action_addCustomer_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSupplierFragment"
        android:name="com.example.jeffaccount.AddSupplierFragment"
        android:label="add_supplier_fragment"
        tools:layout="@layout/add_supplier_fragment" >
        <action
            android:id="@+id/action_addSupplierFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/addQuotationFragment"
        android:name="com.example.jeffaccount.AddQuotationFragment"
        android:label="AddQuotationFragment" >
        <action
            android:id="@+id/action_addQuotationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>