<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/search_by"
        android:gravity="center"
        android:fontFamily="@font/asap_medium"
        style="@style/TextAppearance.AppCompat.Large"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/search_by_jobno_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:fontFamily="@font/asap_medium"
        android:textColor="@color/colorPrimary"
        android:text="@string/job_no"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/search_by_quotationno_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/quotation_no"
        android:fontFamily="@font/asap_medium"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/search_by_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/customer_name"
        android:gravity="center"
        android:fontFamily="@font/asap_medium"
        android:textColor="@color/colorPrimary"
        style="@style/TextAppearance.AppCompat.Title"/>
</LinearLayout>